<resources>
    <string name="app_name">Safety First</string>
    <string name="login"><u><b>Login</b></u></string>
    <string name="action_settings">Settings</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="feedback"><b><u>Give Your Feedback</u></b></string>
    <string name="slide_1_title">News</string>
    <string name="slide_1_desc">Get the latest news of your industry!</string>
    <string name="slide_2_title">Law</string>
    <string name="slide_2_desc">Discuss the issues with experts all round the globe</string>
    <string name="slide_3_title">Discussion</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>
    <string name="slide_4_title">Know it</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>
    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="no_data_available">Please check your internet connection</string>
    <string name="readMore">Read More</string>
    <string name="transition_string">hello</string>
    <string name="news">News</string>
    <string name="knowit">Know it</string>
    <string name="sign_up"><u><b>Sign Up</b></u></string>
    <string name="sign_in">Sign In</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_password">Password</string>
    <string name="menu_logout">Log Out</string>
    <string name="heading_recent">Recent</string>
    <string name="heading_my_posts">My Posts</string>
    <string name="heading_my_top_posts">My Top Posts</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="titleNewsActivity">News</string>
    <string name="titleDashboard">Safety First</string>
    <string name="titleDiscussionActivity">Discussion Forum</string>
    <string name="titleNewPostActivity">Ask A Question</string>
    <string name="titlePostDetailActivity">Post Details </string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="WelcomeDetails">Lorem ipsum dolor sit amet, consectetur adipiscing elit sed do eiusmod, tempor incididunt ut labore et
     dolore magna aliqua. Ut enim ad minim veniamm quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
    Duis aute irure dolor in reprehenderit in vouptate velit esse cillum dolore eu fugiat nulla pariatur, Excepteur sint occaecat cupidatat non
    proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</string>
    <string name="title_activity_feed">FeedActivity</string>
    <string name="server_client_id">85010793512-5t8ejsijkp68vgudb9jn00ct1tnrgoac.apps.googleusercontent.com</string>
    <string name="server_widget_url">http://www.google.com</string>
    <string name="title_activity_feeds">FeedsActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_login">Sign in</string>
    <string name="desc_google_icon">Google Logo</string>
    <string name="server_client_id_web">85010793512-guh26t71dh519hp1il371it4bq4kil0h.apps.googleusercontent.com</string>
    <string name="project_id">friendlypix-4fa22</string>
    <string name="title_activity_welcome">FriendlyPix</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="explore_button_text">explore</string>
    <string name="sign_in_button_text">sign in</string>
    <string name="sign_out_button_text">sign out</string>
    <string name="show_feed_button_text">show feed</string>
    <string name="drawer_profile_title">Profile</string>
    <string name="drawer_settings_title">Settings</string>
    <string name="drawer_your_feed_title">Your Feed</string>
    <string name="title_activity_comments">CommentsActivity</string>
    <string name="title_activity_new_post">New Post</string>
    <string name="invite_friends_button_text">Invite your friends</string>
    <string name="my_posts_button_text">My posts</string>
    <string name="title_activity_user_detail">UserDetailActivity</string>
    <string name="follow_user_error">Unable to follow user.</string>
    <string name="picture_chooser_title">Select or take picture to post</string>
    <string name="new_comment_hint">Enter new comment</string>
    <string name="new_post_location_placeholder">Getting location...</string>
    <string name="user_info_no_name">Unknown user</string>
    <string name="error_required_field">Required</string>
    <string name="error_upload_task_create">Couldn\'t create upload task.</string>
    <string name="default_progress_message">Please wait...</string>
    <string name="profile_progress_message">Signing in...</string>
    <string name="post_upload_progress_message">Uploading...</string>
    <string name="user_logged_out_error">You must be logged in to do that.</string>
    <string name="error_user_not_signed_in">Error user not signed in.</string>
    <string name="title_activity_feed_activity_copy">FeedActivityCopy</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_pic">PicActivity</string>
    <string name="ladders_heading">Ladders</string>
    <string name="scaffolding_heading">Scaffoldings</string>
    <string name="news_heading">Latest</string>
    <string name="fav_heading">Fav</string>
    <string name="lorem">Nothing found!</string>
    <string name="search_activity">Search Activity</string>
    <string name="send_to">Share using..</string>
    <string name="action_image">Image</string>
    <string name="action_video">Video</string>
    <string name="action_file">File</string>
    <string name="action_link">Link</string>
    <string name="title">Title</string>
    <string name="write_your_post">Enter your question</string>
    <string name="attach_link">Attach Link</string>
    <string name="image">Image</string>
    <string name="file">File</string>
    <string name="video">Video</string>
    <string name="link">Link</string>
    <string name="facebook_app_id">510719265719344</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="nav_home">Home</string>
    <string name="nav_photos">Photos</string>
    <string name="nav_movies">Movies</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Photos</item>
        <item>Movies</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>
    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="invitation_title">Send Safety First Invitation</string>
    <string name="invitation_message">This app is terrific, give it a try.</string>
    <string name="invitation_deep_link">http://example.com/offer/five_dollar_offer</string>
    <string name="invitation_custom_image">https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png</string>
    <string name="invitation_cta">Install!</string>
    <string name="send_failed">Sending invitations failed</string>
    <string name="invite_dialog_title">You got an invitation!</string>
    <string name="invite">Send invitations!</string>
    <string name="welcome">Invites</string>
    <string name="referrer_hint">Deep link not provided</string>
    <string name="deep_link_default">Deep link not set</string>
    <string name="invitation_id_default">Invitation ID not set</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="deep_link_fmt" formatted="false">Deep Link: %s</string>
    <string name="invitation_id_fmt" formatted="false">Invitation ID: %s</string>
    <string name="sent_invitations_fmt" formatted="false">Sent %d invitations</string>
    <string name="item_title">News Headline</string>
    <string name="item_desc">Article</string>
    <string name="spinner_title">Join As</string>
    <string name="delete_post">Delete Post</string>
    <string name="dummy1">Lorem ipsum dolor sit amet, consectetur adipiscing elit sed do eiusmod, tempor incididunt ut labore et
     dolore magna aliqua. Ut enim ad minim veniamm quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
    Duis aute irure dolor in reprehenderit in vouptate velit esse cillum dolore eu fugiat nulla pariatur, Excepteur sint occaecat cupidatat non
    proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</string>
    <string name="dummy2">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</string>
    <string name="dummy3">Li Europan lingues es membres del sam familie. Lor separat existentie es un myth. Por scientie, musica, sport etc, litot Europa usa li sam vocabular. Li lingues differe solmen in li grammatica, li pronunciation e li plu commun vocabules. Omnicos directe al desirabilite de un nov lingua franca: On refusa continuar payar custosi traductores. At solmen va esser necessi far uniform grammatica, pronunciation e plu sommun paroles. Ma quande lingues coalesce, li grammatica del resultant lingue es plu simplic e regulari quam ti del coalescent lingues.</string>
    <string name="previous">PREVIOUS</string>
    <string name="forklift">A forklift is also known as a lift truck essentially because it’s a truck that  can lift loads using a set of forks. A forklift can be used in numerous  places such as warehouses, factories, farms, shipping yards and much  more. There are many types of forklifts which can be called a variety of  different names; in this case we will use the basic names of the forklifts  when describing their capabilities.</string>
    <string name="designation_label">Designation : </string>
    <string name="company_label">Company : </string>
    <string name="qualification_label">Qualification :</string>
    <string name="update_profile">Update Profile</string>
</resources>