<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">
<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:id="@+id/activity_post_detail"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="mDiscussion.PostDetailActivity">

    <include
        android:id="@+id/post_author_layout"
        layout="@layout/include_post_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true" />

    <TextView
        android:id="@+id/post_title"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:textStyle="bold"
        tools:text="My First Post" />


    <TextView
        android:id="@+id/post_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        tools:text="@string/lorem" />

    <android.support.v7.widget.ButtonBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/image_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/image"
            android:onClick="showImage"/>
        <Button
            android:id="@+id/file_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/file"
            android:onClick="showFile"/>
        <Button
            android:id="@+id/video_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/video"
            android:onClick="showVideo"/>
        <Button
            android:id="@+id/link_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/link"
            android:onClick="showLink"/>

    </android.support.v7.widget.ButtonBarLayout>

    <LinearLayout
        android:id="@+id/comment_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1.0"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <EditText
            android:id="@+id/field_comment_text"
            android:layout_width="match_parent"
            android:layout_weight="0.8"
            android:layout_height="wrap_content"

            android:singleLine="false"
            android:hint="Write an Answer..."/>

        <Button
            android:id="@+id/button_post_comment"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:background="@android:color/darker_gray"
            android:layout_width="match_parent"
            android:layout_weight="0.2"
            android:layout_height="wrap_content"
            android:text="Post your Answer"/>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_comments"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/item_comment"
        android:layout_above="@+id/comment_form"
        android:layout_below="@+id/post_text_layout" />

</LinearLayout>
</ScrollView>