<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="top|center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".mKnowItActivity.KnowItDetails1" >

        <ImageView
            tools:src="@drawable/placeholder"
            android:id="@+id/image"
            android:layout_width="@dimen/card_image_height"
            android:layout_height="@dimen/card_image_height" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageButton
                android:layout_margin="@dimen/md_keylines"
                android:padding="@dimen/md_keylines"
                android:id="@+id/info_btn"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_info_white_24dp"
                android:background="@drawable/round_red_dark"/>
            <ImageButton
                android:layout_margin="@dimen/md_keylines"
                android:id="@+id/howto_btn"
                android:padding="@dimen/md_keylines"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_help_white_24dp"
                android:background="@drawable/round_red_dark"/>
            <ImageButton
                android:layout_margin="@dimen/md_keylines"
                android:src="@drawable/ic_navigation_check_24"
                android:id="@+id/check_btn"
                android:padding="@dimen/md_keylines"
                android:background="@drawable/round_red_dark"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />
            <ImageButton
                android:layout_margin="@dimen/md_keylines"
                android:src="@drawable/ic_videocam_white_24dp"
                android:background="@drawable/round_red_dark"
                android:id="@+id/video_btn"
                android:padding="@dimen/md_keylines"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <me.biubiubiu.justifytext.library.JustifyTextView
            android:id="@+id/howto"
            android:layout_width="match_parent"
            android:text="@string/dummy1"
            android:layout_height="wrap_content" />
        <me.biubiubiu.justifytext.library.JustifyTextView
            android:id="@+id/info"
            android:text="@string/dummy2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <me.biubiubiu.justifytext.library.JustifyTextView
            android:id="@+id/check"
            android:text="@string/dummy3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <VideoView
            android:id="@+id/vid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</ScrollView>