<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:style="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/user_detail_backdrop_height"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleMarginEnd="64dp">

            <ImageView
                android:id="@+id/backdrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:background="@drawable/round_blue_dark"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="24dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:layout_marginLeft="20dp">
                <RelativeLayout
                    android:id="@+id/info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/user_designation_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/UserStatsTextStyle"
                        android:text="@string/designation_label"
                        android:textAllCaps="true"
                        android:layout_alignParentTop="true" />
                <TextView
                    android:layout_toRightOf="@+id/user_designation_label"
                    android:id="@+id/user_designation"
                    android:layout_width="wrap_content"
                    android:background="@drawable/round_blue_dark"
                    android:textColor="@color/white"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/md_keylines"
                    style="@style/UserStatsTextStyle"
                    android:text="Designation"
                    android:layout_alignParentTop="true" />

                    <TextView
                        android:id="@+id/user_company_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAllCaps="true"
                        style="@style/UserStatsTextStyle"
                        android:text="@string/company_label"
                        android:layout_centerVertical="true"
                        android:layout_below="@id/user_designation"/>

                <TextView
                    android:layout_toRightOf="@+id/user_company_label"
                    android:id="@+id/user_company"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/UserStatsTextStyle"
                    android:paddingLeft="@dimen/md_keylines"
                    android:background="@drawable/round_blue_dark"
                    android:textColor="@color/white"
                    android:text="Company"
                    android:layout_centerVertical="true"
                    android:layout_below="@id/user_designation"/>
                <TextView
                    android:id="@+id/user_qualification_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/UserStatsTextStyle"
                    android:layout_alignParentBottom="true"
                    android:text="@string/qualification_label"
                    android:textAllCaps="true"
                    android:layout_below="@id/user_company"/>
                    <TextView
                        android:layout_toRightOf="@+id/user_qualification_label"
                        android:id="@+id/user_qualification"
                        android:layout_width="wrap_content"
                        android:paddingLeft="@dimen/md_keylines"
                        android:layout_height="wrap_content"
                        android:background="@drawable/round_blue_dark"
                        android:textColor="@color/white"
                        style="@style/UserStatsTextStyle"
                        android:layout_alignParentBottom="true"
                        android:text="Qualification"
                        android:layout_below="@id/user_company"/>
                </RelativeLayout>
                <View
                    android:visibility="gone"
                    android:id="@+id/separator"
                    android:background="@color/user_detail_separator"
                    android:layout_marginLeft="14dp"
                    android:layout_marginRight="14dp"
                    android:layout_width = "1dp"
                    android:layout_height="@dimen/user_detail_photo_size"
                    android:layout_toRightOf="@id/info" />
                <TextView
                    android:visibility="gone"
                    android:id="@+id/user_num_questions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/UserStatsTextStyle"
                    android:text="0 Questions"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@id/separator" />
                <TextView
                    android:visibility="gone"
                    android:id="@+id/user_num_answers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/UserStatsTextStyle"
                    android:text="0 Answers"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/separator"
                    android:layout_below="@id/user_num_followers"/>

            </RelativeLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_red_dark"
                android:text="@string/update_profile"
                android:textColor="@color/white"
                android:layout_margin="@dimen/md_keylines"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:visibility="gone">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="POSTS"/>
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/user_posts_grid"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scrollbars="vertical" />
                <TextView
                    android:layout_marginTop="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="RECENT ACTIVITY"/>
            </LinearLayout>
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/follow_user_fab"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="bottom|right|end"
        android:tint="@android:color/white"
        app:srcCompat="@drawable/ic_person_add_24dp"
        android:layout_margin="@dimen/fab_margin"
        android:visibility="gone"
        android:clickable="true"/>

</android.support.design.widget.CoordinatorLayout>